--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,3 +1,9 @@
 page-contact {
-
+    #SignOutButton
+    {
+        display: block;
+        margin: auto;
+        margin-top: 20%;
+    
+    }
 }
