Chat is now working. Going to style the chat view and also return the username from the server

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,25 @@
 page-home {
+    #messageList
+    {   
+        
+    }
 
+    #messageText
+    {
+        display: inline-block;
+        width: 81%;
+    }
+    #messageSendButton
+    {
+        font-size: 1%;
+        margin-bottom: 2%;
+        display: inline-block;
+    }
+
+    #sendAndMessage
+    { 
+        margin: 2px;      
+        border: 1px solid black;
+        border-radius: 2px;       
+    }
 }
