--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,7 @@
 page-home {
     #messageList
     {   
-        
+        margin-bottom: 40%;
     }
 
     #messageText
@@ -17,8 +17,14 @@ page-home {
     }
 
     #sendAndMessage
-    { 
-        margin: 2px;      
+    {
+        
+        position: fixed;
+        bottom: 8%;
+        width: 100%;
+        margin: 2px;
+        opacity: 100%;
+        background: grey;      
         border: 1px solid black;
         border-radius: 2px;       
     }
